# opengl_learning

./: CMakeLists.txt  configure.bat  main.cpp  run.bat
.cache/clangd/index/: Shader.cpp.2AAC8A5F1ABEAF15.idx  Shader.h.A4AA362D203637D7.idx  main.cpp.149503E645BA5902.idx  main.cpp.32E040CCDD1EA525.idx  main.cpp.92D65BC12C72C8C2.idx
assets/: fragmentShader.glsl  fragmentShader2.glsl  vertexShader.glsl
keks/: chapter_6.cpp  chapter_7.cpp  chapter_8.cpp
src/: Shader.cpp  Shader.h  main.cpp
src/io/: Joystick.cpp  Joystick.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
